--- a/appliaction/undies/web/view/index/index.html
+++ b/appliaction/undies/web/view/index/index.html
@@ -55,12 +55,27 @@
     </div>
     
     {include public/footer}
+    <script type="text/javascript" src="/ststic/undies/js/jquery-1.12.3.min.js"></script>
     <script type="text/javascript" src="/ststic/undies/js/flexible.js"></script>
     <script type="text/javascript" src="/ststic/undies/js/swiper.min.js"></script>
+    <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=dKRFWRnzIFWQVoaekagfg8ZWulTsjRHQ"></script>
     <script>
         var swiper = new Swiper('.swiper-container', {
             pagination: '.swiper-pagination',
             paginationClickable: true
+        });
+
+        var geolocation = new BMap.Geolocation();
+        geolocation.getCurrentPosition(function(r){
+            if(this.getStatus() == BMAP_STATUS_SUCCESS){
+                //alert('您的位置：'+r.point.lng+','+r.point.lat);
+                $.post("{F:url('save_geolocation')}",{lng:r.point.lng,lat:r.point.lat},function(){
+
+                });
+            }
+            else {
+                alert('failed'+this.getStatus());
+            }        
         });
     </script>
 </body>
