--- a/appliaction/undies/web/view/message/add.html
+++ b/appliaction/undies/web/view/message/add.html
@@ -7,6 +7,7 @@
     <title>在线留言</title>
     <link rel="stylesheet" href="/ststic/undies/css/style.css">
     <link rel="stylesheet" href="/ststic/undies/css/cmj.css">
+    
     <script type="text/javascript" src="/ststic/undies/js/jquery-1.12.3.min.js"></script>
     <script type="text/javascript" src="/ststic/undies/js/flexible.js"></script>
     <script type="text/javascript" src="/ststic/undies/js/common.js"></script>
@@ -19,7 +20,7 @@
         </a>
         <span>在线留言</span>
     </div>
-    <div class="write"> 
+    <div class="write" style="margin-top: 45px;"> 
         <form class="form-horizontal">
             <textarea placeholder="写下你宝贵的意见和建议" name="content"></textarea>
             <input type="text" placeholder="手机号" name="mobile">
