--- a/public/ststic/undies/css/cmj.css
+++ b/public/ststic/undies/css/cmj.css
@@ -1,3 +1,4 @@
 .clearfix{ clear: both;height: 0px; }
 .sr-content img{width: 100%;margin-top: 1rem;}
-.sr-content p{ font-size: 0.35rem; padding:0.2rem; line-height: 0.7rem; }
+.sr-content{font-size: 13px; padding:0.2rem; line-height: 25px;}
+.sr-content p{ font-size: 13px; padding:0.2rem; line-height: 25px; }
