--- a/appliaction/study/view/index/index/index.html
+++ b/appliaction/study/view/index/index/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="wap-font-scale" content="no">
-	<title>首页</title>
+	<title>恒鼎学院</title>
     {include public/global_css}
 
 	<script src="/ststic/study/js/jquery.min.js"></script>
