--- a/appliaction/undies/web/view/index/index.html
+++ b/appliaction/undies/web/view/index/index.html
@@ -12,7 +12,7 @@
     <div class="header">
         <span>欧拉曲曼</span>
     </div>
-    <div class="swiper-container index-banner">
+    <div class="swiper-container index-banner" style="margin-top: 50px;">
         <div class="swiper-wrapper">
             {loop $banner $value}
             <div class="swiper-slide">
@@ -32,7 +32,7 @@
                 <li>
                     <a href="{$value['jump_url']}">
                         <div></div>
-                        <p>{$value['name']}</p>
+                        <p style="font-weight: 500">{$value['name']}</p>
                         <p>{$value['bname']}</p>
                     </a>
                 </li>
