--- a/appliaction/note/pc/view/public/global_css.html
+++ b/appliaction/note/pc/view/public/global_css.html
@@ -1,8 +1,7 @@
 <link rel="stylesheet" href="{F:getConfig('config','vendor')}/font-awesome/css/font-awesome.min.css" rel="stylesheet">
 <link rel="stylesheet" href="{F:getConfig('config','vendor')}/bootstrap/css/bootstrap.min.css" />
-<link rel="stylesheet" href="{F:getConfig('config','vendor')}/pace/themes/blue/pace-theme-minimal.css" />
 <link rel="stylesheet" href="{F:getConfig('config','ststic')}/note/css/common.css" />
 <link rel="stylesheet" href="{F:getConfig('config','ststic')}/note/css/css.css" />
 <link rel="stylesheet" href="{F:getConfig('config','ststic')}/note/css/note_main.css" />
 <link rel="stylesheet" href="{F:getConfig('config','ststic')}/note/css/note.css" />
-<link rel="stylesheet" href="{F:getConfig('config','vendor')}/right_click/jquery.contextmenu.css">
+<link rel="stylesheet" href="{F:getConfig('config','vendor')}/right_click/css/smartMenu.css">
