--- a/public/ststic/note/css/note.css
+++ b/public/ststic/note/css/note.css
@@ -1,43 +1,58 @@
-.note ul{
-	margin:0px 325px;
-	width:100%;
+ .note ul{
+	width:80%;
 	overflow:hidden;
-	padding:3em;
+	padding:1em;
 }
 .note ul li{
 	float:left;
 	margin:1em;
 }
+
 .note ul li{
 	color:#000;
 	text-decoration:none;
 	background:#ffc;
 	display:block;
-	height:10em;
-	width:10em;
+	width:20em;
 	padding:1em;
-	-moz-box-shadow:5px 5px 7px rgba(33,33,33,1);
+	position: relative;
+	/* -moz-box-shadow:5px 5px 7px rgba(33,33,33,1);
 	-webkit-box-shadow:5px 5px 7px rgba(33,33,33,7);
 	box-shadow:5px 5px 7px rgba(33,33,33,7);
 	-webkit-transform:rotate(-6deg);
 	-moz-transform:rotate(-6deg);
 	-o-transform:rotate(-6deg);
-
+	
 	 -moz-transition:-moz-transform .15s linear;
 	 -o-transition:-o-transform .15s linear;
-    -webkit-transition:-webkit-transform .15s linear;
+	    -webkit-transition:-webkit-transform .15s linear; */
 	
 }
+
+.note ul li a:hover{
+	color: #3e4c67;
+}
+
 .note ul li h2{
 	font-size:140%;
 	font-weight:bold;
-	padding-bottom:10px;
+	margin:0 auto;
+	margin-top: -25px;
+	width: 10rem;
+	background: #ccc;
+	padding: 10px;
+	text-align: center;
+ 	background-color:rgba(0,0,0,0.2);
 }
+.note ul li p .copy{
+	float: right;
+	cursor: pointer;
+}
+
 .note ul li p{
-	font-family: "Reenie Beanie" ,arial,sans-serif,微软雅黑;
 	font-size:110%;
 }
-.note ul li:nth-child(odd) a{
+/* .note ul li:nth-child(odd) a{
 	-webkit-transform:rotate(-4deg);
 	-moz-transform:rotate(-4deg);
 	-o-transform:rotate(-4deg);
@@ -72,4 +87,4 @@
 	position:relative;
 	z-index:5;
 	
-}
+}  */
