--- a/public/ststic/note/css/note_main.css
+++ b/public/ststic/note/css/note_main.css
@@ -1,4 +1,19 @@
-.menus li{ float: left; text-align: center; line-height: 25px; margin-right: 15px;  cursor: pointer;}
-.menus li input{ width: 80px; text-align: center; height: 20px; }
+html,body{height: 100%;width: 100%; overflow-y:hidden;}
+.top{ width: 100%; background: #3b8cff; line-height: 25px; height: 55px; color: #fff; }
+.top .logo{ font-size: 27px; line-height: 50px; padding-left: 25px; }
+.top .member li{ float: left; }
 
-.note-content{ padding: 5px; min-height: 500px; line-height: 25px; border: none; resize:none; outline:none; }
+.main{ width: 100%; height: 100%; }
+.menus{ padding-left: 20px; padding-top: 20px; width: 20%;  height:inherit;  }
+.menus li{ float: left; position: relative; text-align: center; line-height: 25px;  cursor: pointer; padding-left: 25px; padding-right: 25px; padding-top: 10px; margin-top: 10px; border-radius: 5px; border: 1px solid #fff; margin-right: 5px; }
+.menus li input{ width: 80px; text-align: center; height: 20px; }
+.menus li:hover{ border: 1px solid #ccc;}
+.menus li:hover .check{ display: block;}
+.menus .cur{ border: 1px solid #ccc; }
+.menus .cur .check{  display: block; }
+.menus li .check{ display: none;   width: 20px; color: #fff; height: 20px; background: #3b8cff; border-radius: 10px; line-height: 20px; position: absolute; margin-left: -22px; }
+
+.content-iframe{ width: 80%;  height: 100%; }
+
+.content{ width: 100%; height: 100%;  padding-left: 10px; background: #e1e1e1; }
+.note-content{ padding: 5px; min-height: 300px; line-height: 25px; border: none; resize:none; outline:none;  text-align: left;}
